--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,15 +7,12 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='icon' type='image/x-icon' href='favicon.ico'>
 
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css'
-        integrity='sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=='
-        crossorigin='anonymous' referrerpolicy='no-referrer' />
   <link rel='preconnect' href='https://fonts.googleapis.com'>
   <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
   <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@200;400;700&display=swap'
         rel='stylesheet'>
 </head>
-<body>
+<body class='font-sans'>
 <url-sht-root></url-sht-root>
 </body>
 </html>
